# microgen

./: .gitattributes  CMakeLists.txt  LICENSE  MicroGenerator.cxx  MicroGenerator.hxx  README.md  femdk_ConfigData.cxx  femdk_ConfigData.hxx  femdk_common.hxx  femdk_config.h.in  femdk_except.cxx  femdk_except.hxx  femdk_init.cxx  femdk_logger.cxx  femdk_logger.hxx  femdk_params.cxx  femdk_params.hxx  femdk_types.cxx  femdk_types.hxx  microgen.cxx  microgen_algebra3.cxx  microgen_algebra3.hxx  microgen_config.h.in  microgen_exceptions.cxx  microgen_exceptions.hxx  microgen_options.def  microgen_params.cxx  microgen_params.hxx  microgen_parsing.cxx  microgen_parsing.hxx  microgen_testing.cxx  microgen_testing.hxx  microgen_types.cxx  microgen_types.hxx
config/cmake_modules/: COPYING_DUNE  DebugInstrument.cmake  FindArabica.cmake  FindArmadillo.cmake  FindAutoOpts.cmake  FindBoard.cmake  FindBoostProcess.cmake  FindCppUnit.cmake  FindDXLink.cmake  FindFEMDK.cmake  FindFIG2DEV.cmake  FindGMSH.cmake  FindGPERF.cmake  FindGetFEM.cmake  FindHOOPS.cmake  FindMAdLib.cmake  FindMOAB.cmake  FindMuParser.cmake  FindSILO.cmake  FindSuperLU.cmake  FindTeng.cmake  FindTochnogLib.cmake  FindVigra.cmake  README  SetBaseDir.cmake  SetHostSpecific.cmake  UseLATEX.cmake  UtilsFEMDK.cmake
examples/: example_01.json
options_def/: logger_options.def  micro_options.def  misc_options.def  output_options.def
tests/: algebra3_test.cxx  dummy_test.cxx  parsing_test.cxx
